recursion.lessons.recursion.koch.HexaKoch.scala.error
HexaKoch:7: error: not found: value lenght
		avance(lenght)
                       ^